feat: implement trainee service with user integration and logging
- Created full implementation of TraineeServiceImpl
- Integrated UserService for trainee creation with shared user account
- Used @Transactional in create, update, delete, and list update methods
- Implemented activate/deactivate logic toggling User active state
- Added placeholder logic for training history and unassigned trainer list
- Enhanced logging for all service actions
- Added defensive null/exception handling with custom NotFoundException
- Adjusted Trainee entity to use mapped User data